@@ -17,6 +17,7 @@
                 "gen_join_on_doubleclick" = id; 
                 "gen_leave_on_doubleclick" = id; 
                 "gen_tab_action" = id; 
+                "gen_use_growl" = id; 
                 "key_dislike_words" = id; 
                 "key_words" = id; 
                 window = id; 
